start on Feynman diagrams

--- a/qft-geometry.bib
+++ b/qft-geometry.bib
@@ -19,6 +19,21 @@
   Timestamp                = {2016.01.20}
 }
 
+@Article{Dyson:1952tj,
+  Title                    = {{Divergence of perturbation theory in quantum
+ electrodynamics}},
+  Author                   = {Dyson, F. J.},
+  Journal                  = {Phys. Rev.},
+  Year                     = {1952},
+  Pages                    = {631-632},
+  Volume                   = {85},
+
+  Doi                      = {10.1103/PhysRev.85.631},
+  Owner                    = {andy},
+  Slaccitation             = {%%CITATION = PHRVA,85,631;%%},
+  Timestamp                = {2017.08.30}
+}
+
 @Book{MR1031992,
   Title                    = {Spin geometry},
   Author                   = {Lawson, Jr. and Michelsohn, Marie-Louise},
