--- a/qft-geometry.bib
+++ b/qft-geometry.bib
@@ -92,6 +92,25 @@
   Timestamp                = {2017.08.26}
 }
 
+@Book{MR82g:53003a,
+  Title                    = {A comprehensive introduction to differential geometry. {V}ol. {I}},
+  Author                   = {Spivak, Michael},
+  Publisher                = {Publish or Perish Inc.},
+  Year                     = {1979},
+
+  Address                  = {Wilmington, Del.},
+  Edition                  = {Second},
+
+  Bibliodb                 = {yes},
+  ISBN                     = {0-914098-83-7},
+  Mrclass                  = {53-01},
+  Mrnumber                 = {82g:53003a},
+  Mrreviewer               = {M. A. Akivis},
+  Owner                    = {andy},
+  Pages                    = {xiv+668},
+  Timestamp                = {2017.08.30}
+}
+
 @Article{Witten:1994cg,
   Title                    = {Monopoles and four manifolds},
   Author                   = {Witten, Edward},
