--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -331,6 +331,11 @@ or as pull requests to the source repository hosted at
 \begin{center}
 \small \url{http://github.com/neitzke/qft-geometry}
 \end{center}
+You can join a Slack channel for the course (needs {\tt {@math.utexas.edu}} address)
+at
+\begin{center}
+\small \url{https://join.slack.com/t/qft-geometry/signup} 
+\end{center}
 }
 
 % \tableofcontents
@@ -1067,7 +1072,7 @@ double-covering map
 When $n > 2$, $\Spin(n)$ is simply connected, so this map identifies
 $\Spin(n)$ as the universal covering of $\SO(n)$.
 
-\begin{prop}[Spin representations] \fixme{...}
+\begin{prop}[Spin representations] For 
 \end{prop}
 
 \begin{defn}[Spin structures] \fixme{...}
