--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -409,7 +409,7 @@ which has the crucial properties
 The first property says we can decompose into the $\pm 1$-eigenspaces
 for $\star$:\footnote{concretely $\omega = \half(1 + \star) \omega + \half(1 - \star) \omega $}
 \begin{equation}
-  \Omega^n(X) = \Omega^{n,+}(X) \oplus \Omega^{n,-}(X).
+  \Omega^{2n}(X) = \Omega^{2n,+}(X) \oplus \Omega^{2n,-}(X).
 \end{equation}
 Combining this with the second property one sees that the harmonic forms also decompose:
 \begin{equation}
