fix overloaded notation

--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -549,10 +549,10 @@ Donaldson introduced an \ti{orientation} on $\cM$
 and a family of canonically defined
 closed differential forms $\tau_\alpha \in \Omega^*(\cM)$,
 labeled by classes $\alpha \in H_*(X,\Z)$.
-Then he defined new invariants $\IP{\cO_{\alpha_1} \cdots \cO_{\alpha_k}}$
+Then he defined new invariants $\IP{\cO_{\alpha_1} \cdots \cO_{\alpha_\ell}}$
 by, schematically,
 \begin{equation} \label{eq:donaldson-integral}
-  \IP{\cO_{\alpha_1} \cdots \cO_{\alpha_k}} = \int_\cM \tau_{\alpha_1} \wedge \cdots \wedge \tau_{\alpha_k},
+  \IP{\cO_{\alpha_1} \cdots \cO_{\alpha_\ell}} = \int_\cM \tau_{\alpha_1} \wedge \cdots \wedge \tau_{\alpha_\ell},
 \end{equation}
 and proved that they are independent of the Riemannian metric
 $g$ (under the technical
