fix fatuous error in exercise

--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -514,14 +514,15 @@ the generator of ${\mathfrak u}(1)$, and $\chi: U \to \R$ an ordinary function.)
 \end{exercise}
 
 \begin{exercise}
-Show that when $G = \U(1)$, $\cM \simeq \cH_{2}^{-}(X)$; in particular, in this case
-$\cM$ is a vector space. \fixme{warning: needs Hodge theory}
+Show that when $G = \U(1)$, $\cM \simeq \cH_{2}^{-}(X) \cap H_2(X,\Z)$. 
+\fixme{warning: needs Hodge theory}
 \end{exercise}
 
 When $G$ is nonabelian, the situation is much more difficult.
-$\cM$ is not a vector space. Nevertheless it has some reasonable geometric
+Nevertheless $\cM$ has some reasonable geometric
 structure.
 From now on let us specialize to the case $G = \SU(2)$.
+
 In this case $P$ is classified by the integer
 \begin{equation}
   k = \int_X c_2(P)
