fix that wrong exercise again, hopefully right this time

--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -514,20 +514,23 @@ the generator of ${\mathfrak u}(1)$, and $\chi: U \to \R$ an ordinary function.)
 \end{exercise}
 
 \begin{exercise}
-Show that when $G = \U(1)$, $\cM \simeq \cH_{2}^{-}(X) \cap H_2(X,\Z)$. 
+Show that when $G = \U(1)$, the structure of $\cM$ depends on
+the image of $c_1(P)/2\pi \in H^2(X,\Z)$ under the map
+$p: H^2(X,\Z) \to H^2(X,\R)$; namely, if $p(c_1(P)/2\pi) \in \cH^2_-$
+then $\cM$ is a point, and otherwise $\cM$ is empty.
 \fixme{warning: needs Hodge theory}
 \end{exercise}
 
 When $G$ is nonabelian, the situation is much more difficult.
-Nevertheless $\cM$ has some reasonable geometric
-structure.
+Nevertheless $\cM$ can be studied and moreover it turns out to have a 
+reasonable geometric structure.
 From now on let us specialize to the case $G = \SU(2)$.
 
 In this case $P$ is classified by the integer
 \begin{equation}
-  k = \int_X c_2(P)
+  k = \int_X c_2(P).
 \end{equation}
-where $c_2(P) \in H^4(X,\Z)$ denotes the second Chern class.
+
 \begin{fact}
 If $k>0$ and the metric $g$ on $X$ is \ti{generic} (in a suitable sense), 
 then $\cM$ is a finite-dimensional manifold.
