--- a/qft-geometry.bib
+++ b/qft-geometry.bib
@@ -92,8 +92,8 @@
   Timestamp                = {2017.08.26}
 }
 
-@Book{MR82g:53003a,
-  Title                    = {A comprehensive introduction to differential geometry. {V}ol. {I}},
+@Book{spivak,
+  Title                    = {A comprehensive introduction to differential geometry. {V}ol. {II}},
   Author                   = {Spivak, Michael},
   Publisher                = {Publish or Perish Inc.},
   Year                     = {1979},
