--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -438,7 +438,7 @@ by Donaldson in the 1980s. For an excellent reference see \cite{MR1079726}.
 
 Fix a compact Lie group $G$ and let $P$ denote a principal $G$-bundle over $X$. Then
 we consider \ti{connections} in $P$.\footnote{For background on connections in principal
-bundles I like \cite{MR82g:53003a} or perhaps chapter 2 of \cite{MR1079726}.}
+bundles I like \cite{spivak}, \fixme{but there must also be a shorter reference}.}
 A connection in $P$ may be locally represented by a $1$-form\footnote{By ``locally'' here I mean ``on a patch $U \subset X$ where we
 have chosen a trivialization of the bundle $P \vert_U$.''}
 \begin{equation}
@@ -446,7 +446,7 @@ have chosen a trivialization of the bundle $P \vert_U$.''}
 \end{equation}
 and has a curvature $2$-form $F \in \Omega^2(\fg_P)$,\footnote{$\fg_P$ means the \ti{associated bundle} to $P$ using the
 adjoint action of $G$ on $\fg$, sometimes written $P \times_G \fg$; 
-again see \cite{MR82g:53003a} for this notion. 
+again see \cite{spivak} for this notion. 
 $\fg_P$ locally looks like $\fg$ but is globally twisted
 by the transition functions of $P$. Some people would call this bundle $\ad P$. 
 $\fg_P$ is canonically globally trivial when $\fg$ is abelian, i.e. $\fg_P = X \times \fg$,
