fix mistaken exercise again

--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -517,8 +517,9 @@ the generator of ${\mathfrak u}(1)$, and $\chi: U \to \R$ an ordinary function.)
 Show that when $G = \U(1)$, the structure of $\cM$ depends on
 the image of $c_1(P)/2\pi \in H^2(X,\Z)$ under the map
 $p: H^2(X,\Z) \to H^2(X,\R)$; namely, if $p(c_1(P)/2\pi) \in \cH^2_-$
-then $\cM$ is a point, and otherwise $\cM$ is empty.
+then $\cM$ is $H^1(X,\R) / H^1(X,\Z)$, and otherwise $\cM$ is empty.
 \fixme{warning: needs Hodge theory}
+\fixme{warning: I got this wrong twice already, hopefully it's right now}
 \end{exercise}
 
 When $G$ is nonabelian, the situation is much more difficult.
